test updated for the new data structures